@@ -1,3 +1,8 @@
+Tue Nov 20 07:26:24 GMT 2012  Olly Betts <olly@survex.com>
+
+	* tests/api_anydb.cc: msetweights1 makes multidb1 and multidb2
+	  redundant, so remove them.
+
 Tue Nov 20 07:21:46 GMT 2012  Olly Betts <olly@survex.com>
 
 	* tests/api_backend.cc: Extend msetweights1 to test the case where
